--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,11 @@
 [package]
 name = "draugr"
-version = "0.0.1"
+version = "0.1.0"
 edition = "2021"
+
+authors = ["Misza <misza@misza.net>"]
+description = "A terminal MUD client"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
