--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ license = "MIT"
 ansi-to-tui = "3.1.0"
 anyhow = "1.0"
 bytes = "1.5"
+clap = { version = "4.4", features = ["derive"] }
 crossterm = "0.27"
 ratatui = { version = "0.24", features = ["crossterm"] }
 rhai = "1.16"
