Add basic scripting capability using Rhai
Allows basic functionality:
- connect to a server
- wait for a specific prompt to arrive from the server
- send a string to the MUD, clear or masked (for passwords)

Makes it possible to create a simple auto-login script as demonstrated in aardmud.rhai

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ bytes = "1.5"
 clap = { version = "4.4", features = ["derive"] }
 crossterm = "0.27"
 ratatui = { version = "0.24", features = ["crossterm"] }
+regex = "1.10"
 rhai = "1.16"
 telnet = { version="0.2", features = ["zcstream"] }
 tokio = { version = "1.34", features = ["full"] }
