--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,12 @@ ansi-to-tui = "3.1.0"
 anyhow = "1.0"
 bytes = "1.5"
 clap = { version = "4.4", features = ["derive"] }
-crossterm = "0.27"
+crossterm = { version = "0.27", features = ["event-stream"] }
+# futures = "0.3"
 ratatui = { version = "0.24", features = ["crossterm"] }
 regex = "1.10"
 rhai = "1.16"
 telnet = { version="0.2", features = ["zcstream"] }
 tokio = { version = "1.34", features = ["full"] }
 tokio-util = { version = "0.7", features = ["codec"] }
+tokio-stream = "0.1"
